# decision360-cpg

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  compose.yaml  pyproject.toml  requirements-runtime.txt
.github/workflows/: ci.yml
benchmarks/: README.md  generate_suite_60.py  suite.json  suite_60.json
docs/: ARCHITECTURE.md  DECISIONS.md  EXECUTION_PLAN.md  OPERATIONS.md  PRD.md  PRODUCT_CHARTER.md  ROADMAP.md  SECURITY.md  SIMULATED_WORKFLOWS.md  TECHNICAL_BETA_REPORT.md  TEST_STRATEGY.md
evidence/: PUBLIC_PROXY_RESEARCH_2026-07-17.md  README.md
examples/: case_shortfall.json
src/: README.md
src/decision360/: __init__.py  api.py  auth.py  benchmark.py  cli.py  engine.py  ledger.py  maintenance.py  models.py  store.py  tools.py
src/decision360/static/: app.js  index.html  styles.css
tests/: README.md  test_engine.py
tests/component/: test_api.py  test_cli.py  test_ui_contract.py
tests/integration/: test_backup_restore.py  test_lifecycle.py  test_store.py
tests/performance/: test_api_performance.py
tests/security/: test_auth_security.py
tests/unit/: test_benchmark.py  test_engine.py
